Bug fix for long letters being cut off, increasing spacing below poster profile

--- a/style/theme/content.css
+++ b/style/theme/content.css
@@ -543,6 +543,7 @@
 	vertical-align: top;
 	min-width: 190px;
 	vertical-align: top;
+	padding-bottom: 10px;
 }
 .phpbb .post .postprofile {
 	padding: 0 4px 4px 0;
@@ -571,6 +572,7 @@
 	display: none;
 }
 .phpbb .post .content {
+	padding-bottom: 4px;
 	word-wrap: break-word;
 	overflow: hidden;
 }
